fix: paddings on mobile version

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
     margin: 0;
     box-sizing: border-box;
     overflow-x: hidden;
-    /* min-width: 400px; */
+    min-width: 375px;
     font-family: "PT Sans", sans-serif;
     font-style: normal;
     font-weight: normal;
@@ -143,7 +143,6 @@ body {
     text-align: center;
     z-index: 2;
     padding: 30px;
-    transition: all 0.5s ease-in-out;
 }
 
 .burger-menu li {
@@ -367,12 +366,13 @@ body {
 
 .season-collection {
     max-width: 880px;
-    min-height: 600px;
+    height: 600px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     margin: 0 auto;
+    /* padding: 100px 0 0 0; */
 }
 
 .season-collection__title {
@@ -395,11 +395,11 @@ body {
     font-size: 14px;
     line-height: 150%;
     text-align: center;
-    padding: 40px 0 43px 0;
+    padding: 40px 0 63px 0;
 }
 
 .season-collection__button {
-    width: 300px;
+    min-width: 300px;
     font-size: 18px;
     text-align: center;
     letter-spacing: 0.1em;
@@ -447,7 +447,7 @@ body {
     min-height: 362px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: center;
     margin: 0 auto;
     background: #0f0f0f;
